force-app/main/default/objects/TVA_CFB__DocuVault_Folders__c/TVA_CFB__DocuVault_Folders__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>DocuVault Folders</label>
</CustomObject>