force-app/main/default/objects/TVA_CFB__DocuVault_Folders__c/fields/TVA_CFB__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__Object_Name__c</fullName>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>