force-app/main/default/objects/TVA_CFB__DocuVault_Folders__c/fields/TVA_CFB__Record_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__Record_Type_ID__c</fullName>
    <label>Record Type ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>