force-app/main/default/objects/TVA_CFB__DocuVault_Folders__c/fields/TVA_CFB__Value__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__Value__c</fullName>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>